fixed content spacing

--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,14 @@ nav a:hover {
     min-width: 60vh;
     max-height: 60vh;
     /* margin-bottom: 100px; */
+}
+
+#image1 {
     margin-right: 100px;
+}
+
+#image2 {
+    margin-left: 100px;
 }
 
 .mission {
